# kitty-CLI

./: .coverage  .gitattributes  .gitignore  ABOUT.md  CHANGELOG.md  KITTY.md  README.md  bandit_report.json  install.bat  install.sh  kitty_agent.py  main.py  pyproject.toml  requirements.txt  setup.py  test_results.txt
.github/workflows/: ci.yml  release.yml
doc/: kittycode_audit.md
docs/: architecture.md  command-spec.md  engineering-standards.md  non-goals.md  product-spec-v1.md  release-checklist.md  release-policy.md  release-readiness-v1.md  testing-strategy.md
docs/adr/: 0001-cli-boundary-and-command-contract.md  0002-memory-backend-strategy.md  0003-model-routing-and-fallback-policy.md  0004-model-provider-abstraction.md
kittycode/: __main__.py
kittycode/agent/: debate.py  kitty.py  planner.py
kittycode/cli/: app.py  ui.py
kittycode/config/: __init__.py  env_utils.py  readiness.py  runtime.py  settings.py
kittycode/context/: __init__.py  indexer.py  kittymd.py
kittycode/core/: __init__.py  critic.py
kittycode/memory/: decay.py  graph.py  history.py  manager.py  summarizer.py  visualiser.py
kittycode/models/: health.py  llm.py  policy.py  preferences.py  providers.py  registry.py  router.py
kittycode/plugins/: __init__.py  loader.py
kittycode/quantum/: __init__.py  memory_q.py  planner_q.py  rng.py  router_q.py
kittycode/security/: audit_chain.py  policy.py  sandbox.py  vault.py
kittycode/telemetry/: __init__.py  logger.py
kittycode/tools/: dev_tools.py  engine.py  fs_tools.py  git_tools.py  read_tools.py  registry.py  test_tools.py  viz_tools.py
kittycode/utils/: content.py  diff.py  diff_utils.py  helpers.py  stats.py
scratch/: parse.py  test_bytez.py
scripts/: build_artifacts.py
tests/: test_build_script_stage10.py  test_cli_contract.py  test_cli_reliability.py  test_debate.py  test_diff_utils.py  test_engine.py  test_graph_memory.py  test_history_pipeline.py  test_indexer.py  test_integration_coding.py  test_kittymd.py  test_memory.py  test_memory_cli.py  test_models_stage5.py  test_observability_stage8.py  test_packaging_stage9.py  test_planner.py  test_planner_sort.py  test_production_tools.py  test_quantum.py  test_read_tools.py  test_runtime_config.py  test_security_advanced.py  test_security_core.py  test_security_policy.py  test_stage10_readiness.py
