[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kittycode-agent"
version = "2.3.0"


authors = [
  { name="Quantum-Blade1", email="quantum.chain01@gmail.com" },
]
description = "The autonomous feline coding agent that works in your codebase."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "google-genai>=0.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "anthropic>=0.5.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
all = [
    "google-genai>=0.1.0",
    "anthropic>=0.5.0",
]


[project.urls]
"Homepage" = "https://github.com/Quantum-Blade1/kitty-CLI"
"Bug Tracker" = "https://github.com/Quantum-Blade1/kitty-CLI/issues"

[project.scripts]
kitty = "kittycode.cli.app:app"

[tool.setuptools]
packages = ["kittycode", "kittycode.agent", "kittycode.cli", "kittycode.config", "kittycode.context", "kittycode.core", "kittycode.memory", "kittycode.models", "kittycode.plugins", "kittycode.security", "kittycode.telemetry", "kittycode.tools", "kittycode.utils", "kittycode.quantum"]
include-package-data = true

[tool.setuptools.exclude-package-data]
"*" = ["*.json", "*.env", "__pycache__", "memory_export_*", ".kitty"]

